# GrospectorWebsite

./: .gitignore  CLINE_DEBUGGING_GUIDE.md  Cargo.toml  HOW_TO_USE_TUTORIAL.md  MANUAL_DEMO_GUIDE.md  PROJECT_PLAN.md  README.md  SETUP_COMPLETE.md  Trunk.toml  browser-demo.js  debug-setup.sh  demo-cline-monitoring.sh  index.html  setup.sh  simple-error-monitor.sh  start-debug.sh
src/: lib.rs
src/components/: app.rs  mod.rs
src/components/charts/: comparison_chart.rs  distribution_chart.rs  mod.rs  statistics_chart.rs
src/components/forms/: mod.rs
src/components/layout/: mod.rs
src/components/ui/: footer.rs  header.rs  loading_spinner.rs  mod.rs  theme_toggle.rs
src/services/: bitcoin_api.rs  data_processor.rs  mod.rs  percentile_calculator.rs
src/styles/: themes.css
src/types/: api.rs  bitcoin.rs  mod.rs
src/utils/: chart_theme.rs  constants.rs  formatters.rs  mod.rs  theme.rs  validators.rs
